sandbox/k8s/apiserver/overlays/aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
spec:
  replicas: 3
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: dframe-target
