sandbox/k8s/apiserver/overlays/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver
spec:
  selector:
    app: apiserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
